--- a/lib/src/dashboard_component/post_account_component/post_account_component.html
+++ b/lib/src/dashboard_component/post_account_component/post_account_component.html
@@ -12,7 +12,7 @@
                     <div class="text-center">
                         <span class="float-left ml-2 mr-1">
                             <button type="button" class="btn btn-sm rounded-circle btn-outline-primary br-20 px-3"
-                                    (click)="showPopup('facebook')">
+                                    (click)="showPopup(0)">
                                 <span class="fa fa-plus"></span>
                             </button>
                         </span>
@@ -37,7 +37,7 @@
                     <div class="text-center">
                         <span class="float-left ml-2 mr-1">
                             <button type="button" disabled="true" class="btn btn-sm rounded-circle btn-outline-primary br-20 px-3"
-                                    (click)="showPopup('twitter')">
+                                    (click)="showPopup(1)">
                                 <span class="fa fa-plus"></span>
                             </button>
                         </span>
@@ -62,7 +62,7 @@
                     <div class="text-center">
                         <span class="float-left ml-2 mr-1">
                             <button type="button" disabled="true" class="btn btn-sm rounded-circle btn-outline-danger br-20 px-3"
-                                    (click)="showPopup('instagram')">
+                                    (click)="showPopup(3)">
                                 <span class="fa fa-plus"></span>
                             </button>
                         </span>
@@ -87,7 +87,7 @@
                     <div class="text-center">
                         <span class="float-left ml-2 mr-1">
                             <button type="button" disabled="true" class="btn btn-sm rounded-circle btn-outline-dark br-20 px-3"
-                                    (click)="showPopup('linkedin')">
+                                    (click)="showPopup(2)">
                                 <span class="fa fa-plus"></span>
                             </button>
                         </span>
@@ -107,7 +107,10 @@
 <div class="dialog-box card bg-transparent border-0 shadow-c br-20" id="dialog" display="false">
     <div class="card-header bg-transparent border-0 text-center" id="media-icon">
         <div class="nt-circle">
-            <img src="img/{{mediaIcon}}_icon.png" alt="{{mediaIcon}}-icon" width="100px" height="100px" class="nt-center img-fluid">
+            <img src="img/facebook_icon.png" alt="facebook-icon" width="100px" height="100px" class="nt-center img-fluid" *ngIf="accountTabs[0]">
+            <img src="img/twitter_icon.png" alt="twitter-icon" width="100px" height="100px" class="nt-center img-fluid" *ngIf="accountTabs[1]">
+            <img src="img/linkedin_icon.png" alt="linkedin-icon" width="100px" height="100px" class="nt-center img-fluid" *ngIf="accountTabs[2]">
+            <img src="img/instagram_icon.png" alt="instagram-icon" width="100px" height="100px" class="nt-center img-fluid" *ngIf="accountTabs[3]">
 <!--            <span class="nt-center fa fa-{{ mediaIcon }} {{ mediaText }} fa-6x"></span>-->
         </div>
     </div>
@@ -138,13 +141,16 @@
 
     <div class="font-nyata">
         <div class="text-center mt-4 {{appTheme['text-colour']}}">
-            {{ mediaName }} Accounts
+            <template [ngIf]="accountTabs[0]">Facebook Accounts</template>
+            <template [ngIf]="accountTabs[1]">Twitter Accounts</template>
+            <template [ngIf]="accountTabs[2]">Linkedin Accounts</template>
+            <template [ngIf]="accountTabs[3]">Instagram Accounts</template>
         </div>
     </div>
 
-    <div class="my-4 px-2" *ngIf="mediaName=='Facebook'">
-        <div class="card bg-transparent {{appTheme['box-one']}} mb-1 border-0 c-bordered border-0 br-20" *ngIf="accountEmails.isNotEmpty">
-            <div *ngFor="let email of accountEmails; let $i=index" class="card-body border-0 row">
+    <div class="my-4 px-2" *ngIf="accountTabs[0]">
+        <div class="card bg-transparent {{appTheme['box-one']}} mb-1 border-0 c-bordered border-0 br-20" *ngIf="accounts.facebook.isNotEmpty">
+            <div *ngFor="let email of accounts.facebook; let $i=index" class="card-body border-0 row">
                 <span class="fa fa-user-circle col-3 mx-auto fa-2x {{appTheme['text-muted']}} my-auto"></span>
                 <div class="{{appTheme['text-muted']}} col-6 text-sm-left mx-auto my-auto d-post-text">
                     {{ email.username }}
@@ -152,7 +158,7 @@
                 <span class="fa fa-trash col-3 {{appTheme['text-muted']}} mx-auto my-auto" (click)="deleteFacebookAccount($i)"></span>
             </div>
         </div>
-        <div class="mb-1 p-3 border-0 c-bordered border-0 br-20" *ngIf="accountEmails.isEmpty">
+        <div class="mb-1 p-3 border-0 c-bordered border-0 br-20" *ngIf="accounts.facebook.isEmpty">
             <div class="nt-center">
                 <div class="text-center">No account added</div>
             </div>
@@ -163,8 +169,8 @@
                 </span>
         </div>
     </div>
-    <div class="my-4 px-4" disabled="true" *ngIf="mediaName=='Twitter'">
-        <div class="card bg-transparent {{appTheme['box-one']}} mb-1 border-0 c-bordered border-0 br-20" *ngIf="accountEmails.isNotEmpty">
+    <div class="my-4 px-4" disabled="true" *ngIf="accountTabs[1]">
+        <div class="card bg-transparent {{appTheme['box-one']}} mb-1 border-0 c-bordered border-0 br-20" *ngIf="accounts.twitter.isNotEmpty">
             <div class="card-body border-0 row">
                 <span class="fa fa-user-circle col-3 mx-auto fa-2x {{appTheme['text-muted']}} my-auto"></span>
                 <div class="{{appTheme['text-muted']}} col-6 text-sm-left mx-auto my-auto d-post-text">
@@ -173,28 +179,7 @@
                 <span class="fa fa-trash col-3 {{appTheme['text-muted']}} mx-auto my-auto"></span>
             </div>
         </div>
-        <!--<div class="card bg-transparent {{appTheme['box-one']}} mb-1 border-0 c-bordered border-0 br-20" *ngIf="accountEmails.isEmpty">
-            <div class="nt-center">
-                <div class="text-center">No account added</div>
-            </div>
-        </div>-->
-        <div class="form-group">
-                <span class="float-right my-3">
-                    <button type="button" class="btn btn-sm btn-primary px-3 br-20 mx-2" (click)="cancelView()">Cancel</button>
-                </span>
-        </div>
-    </div>
-    <div class="my-4 px-4" disabled="true" *ngIf="mediaName=='Instagram'">
-        <div class="card bg-transparent {{appTheme['box-one']}} mb-1 border-0 c-bordered border-0 br-20" *ngIf="accountEmails.isNotEmpty">
-            <div class="card-body border-0 row">
-                <span class="fa fa-user-circle col-3 mx-auto fa-2x {{appTheme['text-muted']}} my-auto"></span>
-                <div class="{{appTheme['text-muted']}} col-6 text-sm-left mx-auto my-auto d-post-text">
-                    Nothing
-                </div>
-                <span class="fa fa-trash col-3 {{appTheme['text-muted']}} mx-auto my-auto"></span>
-            </div>
-        </div>
-        <!--<div class="card bg-transparent {{appTheme['box-one']}} mb-1 border-0 c-bordered border-0 br-20" *ngIf="accountEmails.isEmpty">
+        <!--<div class="card bg-transparent {{appTheme['box-one']}} mb-1 border-0 c-bordered border-0 br-20" *ngIf="accounts.isEmpty">
             <div class="nt-center">
                 <div class="text-center">No account added</div>
             </div>
@@ -205,8 +190,8 @@
                 </span>
         </div>
     </div>
-    <div class="my-4 px-4" disabled="true" *ngIf="mediaName=='LinkedIn'">
-        <div class="card bg-transparent {{appTheme['box-one']}} mb-1 border-0 c-bordered border-0 br-20" *ngIf="accountEmails.isNotEmpty">
+    <div class="my-4 px-4" disabled="true" *ngIf="accountTabs[2]">
+        <div class="card bg-transparent {{appTheme['box-one']}} mb-1 border-0 c-bordered border-0 br-20" *ngIf="accounts.linkedin.isNotEmpty">
             <div class="card-body border-0 row">
                 <span class="fa fa-user-circle col-3 mx-auto fa-2x {{appTheme['text-muted']}} my-auto"></span>
                 <div class="{{appTheme['text-muted']}} col-6 text-sm-left mx-auto my-auto d-post-text">
@@ -215,7 +200,28 @@
                 <span class="fa fa-trash col-3 {{appTheme['text-muted']}} mx-auto my-auto"></span>
             </div>
         </div>
-        <!--<div class="card bg-transparent {{appTheme['box-one']}} mb-1 border-0 c-bordered border-0 br-20" *ngIf="accountEmails.isEmpty">
+        <!--<div class="card bg-transparent {{appTheme['box-one']}} mb-1 border-0 c-bordered border-0 br-20" *ngIf="accounts.isEmpty">
+            <div class="nt-center">
+                <div class="text-center">No account added</div>
+            </div>
+        </div>-->
+        <div class="form-group">
+                <span class="float-right my-3">
+                    <button type="button" class="btn btn-sm btn-primary px-3 br-20 mx-2" (click)="cancelView()">Cancel</button>
+                </span>
+        </div>
+    </div>
+    <div class="my-4 px-4" disabled="true" *ngIf="accountTabs[3]">
+        <div class="card bg-transparent {{appTheme['box-one']}} mb-1 border-0 c-bordered border-0 br-20" *ngIf="accounts.facebook.isNotEmpty">
+            <div class="card-body border-0 row">
+                <span class="fa fa-user-circle col-3 mx-auto fa-2x {{appTheme['text-muted']}} my-auto"></span>
+                <div class="{{appTheme['text-muted']}} col-6 text-sm-left mx-auto my-auto d-post-text">
+                    Nothing
+                </div>
+                <span class="fa fa-trash col-3 {{appTheme['text-muted']}} mx-auto my-auto"></span>
+            </div>
+        </div>
+        <!--<div class="card bg-transparent {{appTheme['box-one']}} mb-1 border-0 c-bordered border-0 br-20" *ngIf="accounts.isEmpty">
             <div class="nt-center">
                 <div class="text-center">No account added</div>
             </div>
