--- a/lib/src/dashboard_component/view_post_component/view_post_component.html
+++ b/lib/src/dashboard_component/view_post_component/view_post_component.html
@@ -64,50 +64,26 @@
                         </tfoot>
                     </table>
                 </div>
-                <!--<div class="table" *ngIf="filteredPosts.isNotEmpty">
-                    <div class="t-row header">&lt;!&ndash;(click)="getAllIds()"&ndash;&gt;
-                        <div class="cell text-left">
-                            Post message
-                        </div>
-                        <div class="cell">
-                            Post tags
-                        </div>
-                        <div class="cell">
-                            Status
-                        </div>
-                        <div class="cell">
-                            Created at
-                        </div>
-                    </div>
-                    <div class="t-row" *ngFor="let filteredPost of filteredPosts; let $i=index" [class.selected]="filteredPost.checkedState"> &lt;!&ndash;(click)="getId($i)"&ndash;&gt;
-                        <div class="cell" data-title="Post Message">
-                            <span class="d-resp-text">{{filteredPost.postMessage}}</span>
-                        </div>
-                        <div class="cell" data-title="Post Tags">
-                            <span class="tag d-resp-text" *ngFor="let tag of filteredPost.postTag">{{tag}}</span>
-                        </div>
-                        <div class="cell" data-title="Status">
-                            <span class="text-success" *ngIf="filteredPost.postStatus">Posted</span>
-                            <span class="text-primary" *ngIf="!filteredPost.postStatus">Pending</span>
-                        </div>
-                        <div class="cell" data-title="Created On">
-                            <span class="d-resp-co">{{filteredPost.createdOn}}</span>
-                        </div>
-                    </div>
-                </div>-->
-                <div *ngIf="filteredPosts.isEmpty && !loading">
-                    <div class="nt-center {{appTheme['text-muted']}}" style="width: max-content;">
-                        <span class="fa fa-cloud {{appTheme['text-muted']}} mr-1"></span>
-                        <span class="font-weight-bold text-muted">No data</span>
-                        <!--{{emptyMessage}}-->
-                        <!--<button type="button" class="btn btn-sm btn-outline-primary br-20 ml-2" *ngIf="createNeed" [routerLink]="InnerRoutePaths.create_post.toUrl()">
-                            <span class="fa fa-plus-circle mr-1"></span>Create post
-                        </button>-->
-                    </div>
-                </div>
-                <div *ngIf="filteredPosts.isEmpty && loading">
-                    <div class="nt-center {{appTheme['text-muted']}}">
-                        <img src="img/load.gif" alt="Loading..." class="img-fluid">
+                <div *ngIf="filteredPosts.isEmpty">
+                    <div class="nt-center {{appTheme['text-muted']}} text-center mt-4" style="width: max-content;">
+                        <template [ngIf]="!loading">
+                            <div class="mb-1">
+                                <span class="fa fa-database {{appTheme['text-muted']}} fa-5x drop-fade"></span>
+                            </div>
+                            <span class="font-weight-bold text-muted fade-in">Nothing to show</span><br>
+                            <span class="text-muted figure-caption"><span class="text-muted font-weight-bold fade-in">Suggestions:</span> You can also create:</span> <br>
+                            <div class="mt-2">
+                                <span class="mx-2 slide-right">
+                                    <button class="btn btn-sm btn-outline-dark br-20 px-4" (click)="gotoPosts()">Posts</button>
+                                </span>
+                                <span class="mx-2 slide-left">
+                                    <button class="btn btn-sm btn-outline-dark br-20 px-4" (click)="gotoSchedules()">Schedules</button>
+                                </span>
+                            </div>
+                        </template>
+                        <template [ngIf]="loading">
+                            <img src="img/load.gif" alt="Loading..." class="img-fluid">
+                        </template>
                     </div>
                 </div>
             </div>
@@ -121,11 +97,12 @@
 <div *ngIf="editPopup" class="popup br-10 p-3 shadow">
     <div class="px-2 py-3 br-10 text-dark bg-light">
         <div class="row w-100 m-0 p-0" *ngIf="tabs[0]">
+            <div class="font-weight-bold h5 mb-2 mx-4">Post Message</div>
             <div class="col-10 my-auto">
                 <textarea name="message"
                           id="message"
                           cols="30"
-                          rows="7"
+                          rows="5"
                           placeholder="Type message here..."
                           class="nt-form-control br-20"
                           [(ngModel)]="message"
@@ -152,6 +129,7 @@
             </div>
         </div>
         <div class="row w-100 m-0 p-0" *ngIf="tabs[1]">
+            <div class="font-weight-bold h5 mb-2 mx-auto">Post Tags</div>
             <div class="col-12 my-auto">
                 <form action="" novalidate>
                     <div class="form-group">
@@ -186,13 +164,11 @@
             </div>
         </div>
         <div class="row w-100 m-0 p-0" *ngIf="tabs[2]">
+            <div class="font-weight-bold h5 mb-2 mx-auto">Post Image</div>
             <div class="col-12 my-auto">
-                <textarea name="message"
-                          id="photos"
-                          cols="30"
-                          rows="5"
-                          placeholder="Type message here..."
-                          class="nt-form-control br-20"></textarea>
+                <div class="m-0 p-2" id="image-holder">
+                    <image-app></image-app>
+                </div>
                 <div class="row mx-0 mt-3 p-0">
                     <span class="br-20 px-3 py-1 special-btn mr-3 cursor-pointer font-weight-bold text-muted" (click)="switchTabs(1)">
                         <span class="fa fa-hashtag mr-1"></span>Tags
@@ -204,7 +180,7 @@
             </div>
         </div>
         <div class="mt-3 p-0 text-right">
-            <button class="btn btn-sm btn-warning br-20 px-4 mr-2"> <span class="fa fa-edit mr-1"></span>Edit</button>
+            <button class="btn btn-sm btn-success br-20 px-4 mr-2" (click)="updatePost()"> <span class="fa fa-edit mr-1"></span>Save</button>
             <button class="btn btn-sm btn-light br-20 px-4" (click)="closePopup()">Cancel</button>
         </div>
     </div>
